--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=hello-springboot
 
 spring.security.user.name=user
-spring.security.user.password=pass123
+spring.security.user.password=password
