--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,19 @@ spring.application.name=hello-springboot
 
 spring.security.user.name=user
 spring.security.user.password=password
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+# SQL????
+logging.level.org.hibernate.SQL=DEBUG
+
+# ?????????
+logging.level.org.hibernate.type.descriptor.sql=TRACE
