初期DDL,初期データ登録の設定

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,19 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+# ?????????????
+spring.sql.init.mode=always
+
+# H2??????????????
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # SQL????
 logging.level.org.hibernate.SQL=DEBUG
 
 # ?????????
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
+
